// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies styles for all breakpoints 1`] = `
<div
  className="sc-htpNat GdNTF"
>
  Foo
</div>
`;

exports[`applies styles to custom components via className 1`] = `
<div
  className="sc-ifAKCX ktlgsk"
>
  Hello
</div>
`;

exports[`handles empty styles object 1`] = `
<div
  className="sc-bwzfXH dkZRhB"
>
  Foo
</div>
`;

exports[`handles missing styles object 1`] = `
<div
  className="sc-bdVaJa hkemwx"
>
  Foo
</div>
`;

exports[`optimises un-used breakpoints away 1`] = `
<div
  className="sc-bxivhb leAFYu"
>
  Foo
</div>
`;

exports[`supports responsive styles based on props 1`] = `
<div
  className="sc-EHOje dnKWZa"
>
  Hello
</div>
`;
